hphp/test/zend/good/ext/json/tests/bug46944.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('json')) print 'skip';
}
